Addressing Clang-Code-Analysis build warnings for openSAFETY
This issue was migrated from bug 6538 in our old bug tracker.
Original bug information:
Reporter: Roland Knall
Status: RESOLVED FIXED
Product: Wireshark
Component: GTK+ UI
OS: All
Platform: Other
Version: Git
Attachments:
wireshark_opensafety_v1.9a.patch: Addressing Clang-Code-Analysis build warnings for openSAFETY
wireshark_opensafety_v1.9b.patch: Removes stringToBytes and use hex_str_to_bytes instead
wireshark_opensafety_v1.9c.patch: Applying the final changes for Code-Clang Analysis as well as crc8/crc16 changes