From Roland Knall: Remove the warnings for the Clang-Code-Analysis.

https://bugs.wireshark.org/bugzilla/show_bug.cgi?id=6538

svn path=/trunk/; revision=39717